--- a/VClinic.Infrastructure/VClinic.Infrastructure.csproj
+++ b/VClinic.Infrastructure/VClinic.Infrastructure.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\VClinic.Domain\VClinic.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
